--- a/ClassDataToViewcontroller/ClassDataToViewcontroller/Base.lproj/Main.storyboard
+++ b/ClassDataToViewcontroller/ClassDataToViewcontroller/Base.lproj/Main.storyboard
@@ -29,11 +29,19 @@
                                     <action selector="show:" destination="BYZ-38-t0r" eventType="touchUpInside" id="USv-kL-lj7"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PcE-2o-Jkc">
+                                <rect key="frame" x="104" y="450" width="121" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="showAddr" destination="PcE-2o-Jkc" id="qj0-B1-lBH"/>
                         <outlet property="showImage" destination="Ifx-it-pP5" id="Ep9-a4-WUh"/>
                     </connections>
                 </viewController>
